# all-in-agents

./: .env  .gitignore  EVALUATION_SYSTEM.md  QUICK_START.md  README.md  RUN_WORKFLOW.md  TESTING_GUIDE.md  a2a_protocol.py  config.py  demo.py  env.example  evaluation_agent.py  example_agents.py  frontend_server.py  launcher.py  main.py  poker_engine.py  pyproject.toml  requirements.txt  run.sh  start_demo.py  test_state_management.py  test_system.py  web_interface.py
frontend/: agent-selection.html  app.js  index.html  style.css
src/green_agent/: __init__.py  agent_card.toml  assessment_manager.py  evaluation_examples.py
src/my_util/: my_a2a.py
src/white_agent/: __init__.py  poker_player.py  strategies.py
