[project]
name = "poker-agentify"
version = "0.1.0"
description = "A terminal-based poker agent evaluator inspired by agentify-example-tau-bench"
authors = [
    {name = "Poker Agentify Team", email = "team@poker-agentify.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "a2a-sdk>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "toml>=0.10.2",
    "asyncio-mqtt>=0.16.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
